// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch.vue props disabled 1`] = `
<div
  class="cswitch cswitch--checked cswitch--disabled"
>
  <!--v-if-->
  <div
    class="cswitch__field"
  />
  <!--v-if-->
</div>
`;

exports[`Switch.vue props modelValue 1`] = `
<div
  class="cswitch cswitch--checked"
>
  <!--v-if-->
  <div
    class="cswitch__field"
  />
  <!--v-if-->
</div>
`;

exports[`Switch.vue slots append 1`] = `
<div
  class="cswitch cswitch--checked"
>
  <!--v-if-->
  <div
    class="cswitch__field"
  />
  <div
    class="cswitch__append"
  >
    
    append
    
  </div>
</div>
`;

exports[`Switch.vue slots prepend 1`] = `
<div
  class="cswitch cswitch--checked"
>
  <div
    class="cswitch__prepend"
  >
    
    prepend
    
  </div>
  <div
    class="cswitch__field"
  />
  <!--v-if-->
</div>
`;
